--- a/order-service.yml
+++ b/order-service.yml
@@ -1,3 +1,13 @@
-db:
-  connection: "jdbc:mysql://localhost:3306/order_db"
-message: "Welcome to Global-Mart Order Service"
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/globalmart_order_db?createDatabaseIfNotExist=true
+    username: root
+    password: rootpassword
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+
+# Consultant's Tip: Use this to track which instance of a service is responding
+globalmart:
+  environment: "Consultant-Lab-Alpha"
